Fixed issue where Header was covered by Hero

--- a/src/app/shared/components/hero/hero.component.scss
+++ b/src/app/shared/components/hero/hero.component.scss
@@ -1,7 +1,7 @@
 /* The hero image */
 .hero-image {
   /* Set a specific height */
-  height: calc(100% - 3rem);
+  height: 100%;
 
   /* Position and center the image to scale nicely on all screens */
   background-position: center !important;
